jenkins test - Update index.html

--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
 				<div class="welcome-hero-txt">
 					<h2>best place to find and explore <br> that all you need </h2>
 					<p>
+						TEST
+					</p>
+					<p>
 						Find Best Place, Restaurant, Hotel, Real State and many more think in just One click 
 					</p>
 				</div>
